syntax = "proto3";

option java_package = "com.angelo.destinystatusapp.proto";
option java_multiple_files = true;

message BungiePostMedia {
  string image_url = 1;
  BungiePostMediaType type = 2;
  BungiePostMediaSizes sizes = 3;
}

enum BungiePostMediaType {
  PHOTO = 0;
}

message BungiePostMediaSizes {
  BungiePostMediaSize thumb = 1;
  BungiePostMediaSize small = 2;
  BungiePostMediaSize medium = 3;
  BungiePostMediaSize large = 4;
}

message BungiePostMediaSize {
  int32 width = 1;
  int32 height = 2;
}

message BungiePost {
  string id = 1 ;
  string created_at = 2;
  string text = 3;
  int64 timestamp_seconds = 4;
  string url = 5;
  repeated BungiePostMedia media = 6;
}

message BungieChannelPosts {
  int64 write_timestamp_millis = 1;
  repeated BungiePost items = 2;
}

message AllBungieChannelPosts {
  map<string, BungieChannelPosts> all_bungie_channel_posts = 1;
}
