syntax = "proto3";

option java_package = "com.angelo.destinystatusapp.proto";
option java_multiple_files = true;

message BungiePostItem {
  string id = 1 ;
  string created_at = 2;
  string text = 3;
  int64 timestamp = 4;
  string url = 5;
}

message BungiePostItems {
  repeated BungiePostItem items = 1;
}
